--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
   .content { 
     display: grid; 
     grid-template-columns: 1fr; 
+    width: 80%;
     grid-template-rows: 1fr 2fr 1fr; 
     grid-column-gap: 0px;
     grid-row-gap: 0px; 
