--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
   transform-origin: top;
   /* transform: scale(1.2); */
   margin:0 auto;
+  margin-left:auto;    
  }
 
   .content { 
@@ -56,7 +57,7 @@ body {
   grid-template-rows: 1fr 2fr 1fr; 
   grid-column-gap: 0px;
   grid-row-gap: 0px; 
-  margin-left:70px;
+  margin-left:50px;
   }
 
 
